--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,4 +1,4 @@
-<!--
+
  <div class="2xl:container 2xl:mx-auto lg:py-16 lg:px-20 md:py-12 md:px-6 py-9 px-4">
             <div class="flex flex-col lg:flex-row justify-between gap-8">
                 <div class="w-full lg:w-5/12 flex flex-col justify-center">
@@ -20,25 +20,25 @@
                         <div class="p-4 pb-6 flex justify-center flex-col items-center">
                             <img class="md:block hidden" src="https://i.ibb.co/FYTKDG6/Rectangle-118-2.png" alt="Alexa featured Image" />
                             <img class="md:hidden block" src="https://i.ibb.co/zHjXqg4/Rectangle-118.png" alt="Alexa featured Image" />
-                            <p class="font-medium text-xl leading-5 text-gray-800 dark:text-black mt-4">Alexa</p>
+                            <p class="font-medium text-xl leading-5 text-gray-800 dark:text-black mt-4">Sebastian Barrera/p>
                         </div>
                         <div class="p-4 pb-6 flex justify-center flex-col items-center">
                             <img class="md:block hidden" src="https://i.ibb.co/fGmxhVy/Rectangle-119.png" alt="Olivia featured Image" />
                             <img class="md:hidden block" src="https://i.ibb.co/NrWKJ1M/Rectangle-119.png" alt="Olivia featured Image" />
-                            <p class="font-medium text-xl leading-5 text-gray-800 dark:text-black mt-4">Olivia</p>
+                            <p class="font-medium text-xl leading-5 text-gray-800 dark:text-black mt-4">Christopher Cristóbal</p>
                         </div>
                         <div class="p-4 pb-6 flex justify-center flex-col items-center">
                             <img class="md:block hidden" src="https://i.ibb.co/Pc6XVVC/Rectangle-120.png" alt="Liam featued Image" />
                             <img class="md:hidden block" src="https://i.ibb.co/C5MMBcs/Rectangle-120.png" alt="Liam featued Image" />
-                            <p class="font-medium text-xl leading-5 text-gray-800 dark:text-black mt-4">Liam</p>
+                            <p class="font-medium text-xl leading-5 text-gray-800 dark:text-black mt-4">Alfredo Morales</p>
                         </div>
                         <div class="p-4 pb-6 flex justify-center flex-col items-center">
                             <img class="md:block hidden" src="https://i.ibb.co/7nSJPXQ/Rectangle-121.png" alt="Elijah featured image" />
                             <img class="md:hidden block" src="https://i.ibb.co/ThZBWxH/Rectangle-121.png" alt="Elijah featured image" />
-                            <p class="font-medium text-xl leading-5 text-gray-800 dark:text-black mt-4">Elijah</p>
+                            <p class="font-medium text-xl leading-5 text-gray-800 dark:text-black mt-4">Martin Cespedes</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        -->
+      
