--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,5 @@
 <!-- searchbar start -->
 
-
 <form>
     <div class="bg-white py-3 sm:py-4 lg:py-8">
         <div class="max-w-screen-2xl px-4 md:px-8 mx-auto">
@@ -34,7 +33,6 @@
 </form>
 
 <!-- searchbar end -->
-
 
 
 <section class="max-w-screen-2xl px-4 md:px-8 mx-auto">
@@ -87,7 +85,6 @@
   <!-- hero - end -->
   
 
-
   <!-- product-grid - start -->
   <div class="bg-white py-6 sm:py-8 lg:py-12">
     <div class="max-w-screen-2xl px-4 md:px-8 mx-auto">
@@ -102,7 +99,7 @@
       <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-x-4 md:gap-x-6 gap-y-8">
         <!-- product - start -->
         <div>
-          <a href="#" class="group h-96 block bg-gray-100 rounded-lg overflow-hidden shadow-lg relative mb-2 lg:mb-3">
+          <a href="http://localhost:3001/eldenring" class="group h-96 block bg-gray-100 rounded-lg overflow-hidden shadow-lg relative mb-2 lg:mb-3">
             <img src="../assets/img/EldenRing.jpeg" loading="lazy" alt="Elden Ring cover art" class="w-full h-full object-cover object-center group-hover:scale-110 transition duration-200" />
   
             <div class="flex gap-2 absolute left-0 bottom-2">
@@ -127,7 +124,7 @@
   
         <!-- product - start -->
         <div>
-          <a href="#" class="group h-96 block bg-gray-100 rounded-lg overflow-hidden shadow-lg relative mb-2 lg:mb-3">
+          <a href="http://localhost:3001/hogwarts" class="group h-96 block bg-gray-100 rounded-lg overflow-hidden shadow-lg relative mb-2 lg:mb-3">
             <img src="../assets/img/HL.jpg" loading="lazy" alt="Hogwarts Legacy cover art" class="w-full h-full object-cover object-center group-hover:scale-110 transition duration-200" />
 
             <div class="flex gap-2 absolute left-2 bottom-2">
@@ -179,7 +176,6 @@
         
             </a>
   
-
 
           <div class="flex justify-between items-start gap-2 px-2">
             <div class="flex flex-col">
@@ -233,7 +229,7 @@
       <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 md:gap-6">
         <!-- product - start -->
         <div>
-          <a href="#" class="group h-96 flex items-end bg-gray-100 rounded-lg overflow-hidden shadow-lg relative p-4">
+          <a href="http://localhost:3001/topgames" class="group h-96 flex items-end bg-gray-100 rounded-lg overflow-hidden shadow-lg relative p-4">
             <img src="/assets/img/TombRaider_SC.jpg" loading="lazy" alt="Tomb Raider Graphic" class="w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200" />
   
             <div class="w-full flex flex-col bg-white text-center rounded-lg relative p-4">
